--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -51,6 +51,13 @@
         <version>2.0.13</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.9.2</version>
+        <scope>test</scope>
+    </dependency>
 
     <build>
         <plugins>
